<resources>
    <string name="app_name">Quizzlish</string>
    <string name="app_name_cap">QUIZZLISH</string>
    <string name="title_login_page1">LET\'S STUDY</string>
    <string name="title_login_page2">ENGLISH</string>
    <string name="username_placeholder">Email or phone number</string>
    <string name="password_placeholder">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_label">Login</string>
    <string name="login_with">Or login with</string>
    <string name="no_account">Don\'t have account ?</string>
    <string name="signup_label">Sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="username_label">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_placeholder">Email</string>
    <string name="choices_lable">TRẮC NGHIỆM</string>
    <string name="answer_english_word">Trả lời từ tiếng anh </string>
    <string name="answer_vietnamese_word">Trả lời từ tiếng việt</string>
    <string name="congratulation">Chúc mừng bạn đã hoàn thành</string>
    <string name="score_lable">Điểm:</string>
    <string name="watch_detail">Xem chi tiết</string>
    <string name="congratulateEnglish">Congratulation!</string>
    <string name="continue_button">Continue</string>
    <string name="choices">Trắc nghiệm</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Open Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgotPasswordLable">Forgot password</string>
    <string name="forgot_password_placeholder">Enter your registered email: </string>
    <string name="button_goback_toLogin">Go Back</string>
    <string name="button_reset">Reset</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save changes</string>
    <string name="save">Save</string>
    <string name="upload_avatar">Upload Avatar</string>
</resources>