<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_screen"
    tools:context=".activity.ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="92dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordLable"
            android:textColor="@color/primaryColor"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="54dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_placeholder"
                android:textSize="18sp"
                />
        </LinearLayout>


        <EditText
            android:id="@+id/emailId"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:hint="@string/email_placeholder"
            android:background="@drawable/border_input"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:padding="16dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/btnGoBackToLoginId"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:text="@string/button_goback_toLogin"
                android:textColor="@color/white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnResetId"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:textColor="@color/white"
                android:text="@string/button_reset"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>