<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_screen"
    android:padding="16dp"
    tools:context=".activity.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <ImageView
            android:id="@+id/goBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="92dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/primaryColor"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:gravity="center"
        app:hintEnabled="false"
        android:layout_marginTop="54dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordId"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:gravity="center"
        app:hintEnabled="false"
        android:layout_marginTop="18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordId"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:gravity="center"
        app:hintEnabled="false"
        android:layout_marginTop="18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmedPasswordId"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >
        <Button
            android:id="@+id/btnChangPasswordId"
            android:layout_width="330dp"
            android:layout_height="54dp"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:background="@drawable/round"
            android:textStyle="bold"
            android:padding="12dp"
            android:textAllCaps="true"
            />
    </LinearLayout>



</LinearLayout>