<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@drawable/bg_screen"
    tools:context=".activity.UploadAvatarImage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="92dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_avatar"
            android:textColor="@color/primaryColor"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="54dp"
    >
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/profileImageId"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar_image"/>
        <ImageView
            android:id="@+id/chooseImageId"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/change_image"/>
    </FrameLayout>
</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/goBackBtnId"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:text="@string/button_goback_toLogin"
                android:textColor="@color/white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSaveId"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:textColor="@color/white"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
