<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="92dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label"
                android:textColor="@color/primaryColor"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="54dp"
            >
            <EditText
                android:id="@+id/usernameId"
                android:layout_width="330dp"
                android:layout_height="68dp"
                android:hint="@string/username_label"
                android:background="@drawable/border_input"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:padding="16dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="18dp"
            >
            <EditText
                android:id="@+id/emailId"
                android:layout_width="330dp"
                android:layout_height="68dp"
                android:hint="@string/email_placeholder"
                android:background="@drawable/border_input"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:padding="16dp"
                />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:gravity="center"
            app:hintEnabled="false"
            android:layout_marginTop="18dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordId"
                android:layout_width="330dp"
                android:layout_height="68dp"
                android:inputType="textPassword"
                android:padding="16dp"
                android:hint="@string/password_placeholder"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:gravity="center"
            app:hintEnabled="false"
            android:layout_marginTop="18dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordConfirmId"
                android:layout_width="330dp"
                android:layout_height="68dp"
                android:inputType="textPassword"
                android:padding="16dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            >
            <Button
                android:id="@+id/btnSignup"
                android:layout_width="330dp"
                android:layout_height="54dp"
                android:text="@string/signup_label"
                android:textColor="@color/white"
                android:background="@drawable/round"
                android:textStyle="bold"
                android:padding="12dp"
                android:textAllCaps="true"
                />


        </LinearLayout>

        <ProgressBar
            android:paddingTop="16dp"
            android:id="@+id/progressbar_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>